<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Book</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="change_info">交换信息</string>
    <string name="change_request">交换请求</string>
    <string name="my_shelf">我的书架</string>
    <string name="change_history">交换历史</string>
    <string name="add_book">添加新书</string>
    <string name="save">保存</string>
    <string name="hint_book_name">填写书名</string>
    <string name="hint_book_desc">书籍说明</string>
    <string name="scan_isbn">扫描书籍二维码</string>
    <string name="write_isbn">手动输入书籍二维码</string>
    <string name="weibo_auth">微博登陆</string>
    <string name="back">返回</string>
    <string name="blank"> </string>    
    <string name="msg_default_status"> </string>
     <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松手开始刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在加载...</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
</resources>
