<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" >
    
   <LinearLayout android:id="@+id/nav"
       android:layout_width="fill_parent"
       android:layout_height="50dp">
          <Button
       android:id="@+id/back"
       android:layout_width="wrap_content"
       android:layout_marginLeft="15dp"
       android:layout_height="wrap_content"
       android:text="@string/back" />
          <Button
       android:id="@+id/save"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="right"
       android:layout_marginLeft="160dp"
       android:text="@string/save" />
   </LinearLayout>

   <Button
       android:id="@+id/scan_isbn"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginRight="15dp"
       android:layout_marginLeft="15dp"
       
       android:text="@string/scan_isbn"
       
      />

   <EditText
       android:id="@+id/isbn"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       
       android:layout_marginRight="15dp"
       android:layout_marginLeft="15dp"
      
       android:layout_marginTop="18dp"
       android:hint="@string/write_isbn"
       android:ems="10" >

       <requestFocus />
   </EditText>

   <include android:id="@+id/book_detail"
       android:visibility="visible"
       android:layout_height="wrap_content"
       android:layout_marginTop="300dp"
       android:layout_gravity="center_vertical"
       layout="@layout/book"
        />

</LinearLayout>
